Enhance file handling and UI with improved encoding and file tracking
- Updated file reading/writing to support Unicode and UTF-8 encoding
- Added dynamic window title to show current file and modification status
- Improved file dialogs to support all file types
- Enhanced drag-and-drop functionality with proper event handling
- Added backend connections to update UI state on file operations
- Updated CMakeLists.txt to include Qt6::Core

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(basic-memo VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_STANDARD 17)
 
-find_package(Qt6 6.4 REQUIRED COMPONENTS Quick QuickControls2)
+find_package(Qt6 6.4 REQUIRED COMPONENTS Quick QuickControls2 Core)
 
 qt_standard_project_setup()
 
@@ -31,7 +31,7 @@ set_target_properties(appbasic-memo PROPERTIES
 )
 
 target_link_libraries(appbasic-memo
-    PRIVATE Qt6::Quick Qt6::QuickControls2
+    PRIVATE Qt6::Quick Qt6::QuickControls2 Qt6::Core
 )
 
 include(GNUInstallDirs)
