--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,11 +35,15 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: cmake --build . --config Release
 
+    - name: Deploy Qt Dependencies (macOS)
+      if: matrix.os == 'macos-latest'
+      working-directory: ${{github.workspace}}/build
+      run: |
+        macdeployqt appbasic-memo.app -qmldir=.. -verbose=3
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: basic-memo-${{ matrix.os }}
         path: |
-          ${{github.workspace}}/build/appbasic-memo*
-          ${{github.workspace}}/build/*.app
-          ${{github.workspace}}/build/Release/*.exe 
+          ${{github.workspace}}/build/*.app 
